nginx-example/nginx-service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-ingress
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: nginx-ingress
