nginx-example/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: <your-host-name>
      http:
        paths:
          - backend:
              serviceName: nginx-ingress
              servicePort: 80
